# design4green-api

./: .env  .gitignore  Cargo.toml  README.md
domain/: Cargo.toml
domain/src/: business.rs  lib.rs
domain/src/business/: domain.rs  error.rs  traits.rs
domain/src/core/: entry.rs
domain/src/storage/: error.rs  traits.rs
resources/: arras.csv  dummy.csv
resources/indexes/: idx_departments.json  idx_departments_by_region.json  idx_insee_coms.json  idx_postal.json  idx_regions.json
static/: departments.json  index.html
storage/csv-entry-storage/: Cargo.toml
storage/csv-entry-storage/src/: entry_csv.rs  lib.rs  postal_code_csv_index.rs
storage/memory-index-storage/: Cargo.toml
storage/memory-index-storage/src/: extended.rs  lib.rs
storage/sled-db-entry-storage/: Cargo.toml
storage/sled-db-entry-storage/src/: lib.rs
