[package]
name = "domain"
version = "0.1.0"
authors = ["SlackMagiC <laurent.pietrzyk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
## Error management
thiserror = "1.0"

##SERIALIZATION TO JSON
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
json = "*"