[package]
name = "memory-index-storage"
version = "0.1.0"
authors = ["SlackMagiC <laurent.pietrzyk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "memory_index_storage"

[dependencies]
# Quick hashmap thread shareable.
dashmap = { version ="3.11.10", features = ["serde"] }

##DOMAIN
domain = { path = "../../domain" }

## UUID management
uuid = { version = "0.8.1", features = ["v5", "serde"]}
chrono = { version = "^0.4", features = ["serde"] }

##SERIALIZATION TO JSON
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
json = "*"